--- a/flow-kit/gradle.properties
+++ b/flow-kit/gradle.properties
@@ -6,7 +6,7 @@ VERSION_NAME=1.0.0
 VERSION_CODE=1
 GROUP=com.zeoflow
 
-POM_DESCRIPTION=An Android Library that renders After Effects animations in JSON format
+POM_DESCRIPTION=An Android Library that comes with useful features and components
 POM_URL=https://github.com/zeoflow/flow-kit
 POM_SCM_URL=https://github.com/zeoflow/flow-kit
 POM_SCM_CONNECTION=scm:git@github.com:zeoflow/flow-kit.git
