--- a/flow-kit/src/main/AndroidManifest.xml
+++ b/flow-kit/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.zeoflow">
+    package="com.zeoflow.flow.kit">
 
     <application
         android:allowBackup="true"
