--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ buildscript {
 	dependencies {
 		classpath 'com.android.tools.build:gradle:4.0.1'
 		classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
-		classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
+		classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.5'
 		classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 	}
 }
@@ -34,12 +34,13 @@ task clean(type: Delete) {
 }
 
 ext {
-	compileSdkVersion = 30
-	buildToolsVersion = '30.0.1'
-	minSdkVersion = 21
-	targetSdkVersion = 30
-	versionCode = 1
-	versionName = "1.0.0"
+    compileSdkVersion = 30
+    buildToolsVersion = '30.0.1'
+    minSdkVersion = 21
+    targetSdkVersion = 30
+    versionCode = 2
+    versionName = "1.0.1"
+    ndk = "21.3.6528147"
 
 	androidx = [
 			annotation            : 'androidx.annotation:annotation:1.0.1',
