--- a/flow-kit/maven-push.gradle
+++ b/flow-kit/maven-push.gradle
@@ -23,12 +23,12 @@ def isReleaseBuild() {
 
 def getReleaseRepositoryUrl() {
   return hasProperty('RELEASE_REPOSITORY_URL') ? RELEASE_REPOSITORY_URL
-    : "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
+          : "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
 }
 
 def getSnapshotRepositoryUrl() {
   return hasProperty('SNAPSHOT_REPOSITORY_URL') ? SNAPSHOT_REPOSITORY_URL
-    : "https://oss.sonatype.org/content/repositories/snapshots/"
+          : "https://oss.sonatype.org/content/repositories/snapshots/"
 }
 
 def getRepositoryUsername() {
@@ -40,6 +40,8 @@ def getRepositoryPassword() {
 }
 
 afterEvaluate { project ->
+  project.generateDebugBuildConfig.enabled = false
+  project.generateReleaseBuildConfig.enabled = false
   uploadArchives {
     repositories {
       mavenDeployer {
