--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -28,15 +28,7 @@ android {
 
 dependencies {
 	implementation fileTree(dir: "libs", include: ["*.jar"])
-
-	implementation androidx.appcompat
-	implementation androidx.browser
-	implementation androidx.cardview
-	implementation androidx.constraintlayout
-	implementation androidx.exifinterface
-	implementation androidx.recyclerview
-	implementation androidx.transition
-
 	implementation project(':flow-kit')
 
+	implementation 'androidx.appcompat:appcompat:1.2.0'
 }
