--- a/flow-kit/build.gradle
+++ b/flow-kit/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.fragment:fragment:1.2.5'
 
+    implementation "io.reactivex.rxjava2:rxjava:2.1.0"
+
 }
 
 apply from: "${rootProject.projectDir}/flow-kit/maven-push.gradle"
