--- a/flow-kit/build.gradle
+++ b/flow-kit/build.gradle
@@ -34,8 +34,8 @@ dependencies {
     api fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'com.zeoflow:zson:1.2.2'
-    implementation 'com.zeoflow:material-elements:2.1.0'
-    implementation 'com.zeoflow:stylar:1.0.1'
+    implementation 'com.zeoflow:material-elements:2.1.1'
+    implementation 'com.zeoflow:stylar:1.1.0'
 
 //    implementation ('com.zeoflow:zson:1.2.2') {
 //        transitive = false
@@ -49,9 +49,9 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'androidx.fragment:fragment:1.2.5'
+    implementation 'androidx.fragment:fragment:1.3.0'
 
-    implementation "io.reactivex.rxjava2:rxjava:2.1.0"
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
 
 }
 
