--- a/flow-kit/src/main/AndroidManifest.xml
+++ b/flow-kit/src/main/AndroidManifest.xml
@@ -2,9 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.zeoflow.flow.kit">
 
-    <application
-        android:allowBackup="true"
-        android:supportsRtl="true">
+    <application>
 
         <provider
             android:name="com.zeoflow.initializer.ZeoFlowInitProvider"
