sample to catalog renamed

--- a/flow-kit/gradle.properties
+++ b/flow-kit/gradle.properties
@@ -2,8 +2,8 @@ POM_NAME=FlowKit
 POM_ARTIFACT_ID=flow-kit
 POM_PACKAGING=aar
 
-VERSION_NAME=1.2.0
-VERSION_CODE=5
+VERSION_NAME=1.2.1
+VERSION_CODE=6
 GROUP=com.zeoflow
 
 POM_DESCRIPTION=An Android Library that comes with useful features and components
@@ -19,8 +19,8 @@ POM_DEVELOPER_NAME=ZeoFlow
 
 org.gradle.daemon=true
 
-NEXUS_USERNAME=
-NEXUS_PASSWORD=
-signing.keyId=
-signing.password=
-signing.secretKeyRingFile=
+NEXUS_USERNAME=teogor
+NEXUS_PASSWORD=(TeEl!Be_Ro@01+25)
+signing.keyId=A41C6104
+signing.password=(TeEl!Be_Ro@01+25)
+signing.secretKeyRingFile=/flow-kit.gpg
