updated nexus fields

--- a/flow-kit/gradle.properties
+++ b/flow-kit/gradle.properties
@@ -19,8 +19,8 @@ POM_DEVELOPER_NAME=ZeoFlow
 
 org.gradle.daemon=true
 
-NEXUS_USERNAME=teogor
-NEXUS_PASSWORD=(TeEl!Be_Ro@01+25)
-signing.keyId=A41C6104
-signing.password=(TeEl!Be_Ro@01+25)
-signing.secretKeyRingFile=/flow-kit.gpg
+NEXUS_USERNAME=
+NEXUS_PASSWORD=
+signing.keyId=
+signing.password=
+signing.secretKeyRingFile=
