toggled add_assignees

--- a/.zeobot/config.yml
+++ b/.zeobot/config.yml
@@ -30,7 +30,7 @@ auto_assign:
   use_review_groups: false
   use_assignee_groups: false
   add_reviewers: true
-  add_assignees: false
+  add_assignees: true
   number_of_assignees: 0
   number_of_reviewers: 0
   review_groups:
