--- a/flow-kit/build.gradle
+++ b/flow-kit/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     api fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'com.zeoflow:zson:1.2.2'
-    implementation 'com.zeoflow:material-elements:2.1.1'
+    implementation 'com.zeoflow:material-elements:2.3.1'
     implementation 'com.zeoflow:stylar:1.1.0'
 
 //    implementation ('com.zeoflow:zson:1.2.2') {
@@ -49,7 +49,10 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'androidx.fragment:fragment:1.3.0'
+    implementation 'androidx.fragment:fragment:1.3.2'
+    implementation 'androidx.security:security-crypto:1.1.0-alpha03'
+
+    implementation("com.google.crypto.tink:tink-android:1.5.0")
 
     implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
 
