--- a/catalog/build.gradle
+++ b/catalog/build.gradle
@@ -28,8 +28,7 @@ android {
 
 dependencies {
 	implementation fileTree(dir: "libs", include: ["*.jar"])
-
 	implementation project(':flow-kit')
 
-	implementation 'androidx.appcompat:appcompat:1.2.0'
+	implementation 'com.zeoflow:material-elements:2.4.1'
 }
