--- a/flow-kit/build.gradle
+++ b/flow-kit/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     implementation 'com.zeoflow:material-elements:2.4.1'
     implementation 'com.zeoflow:stylar:1.1.0'
 
+    api 'com.facebook.conceal:conceal:1.1.3@aar'
+
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.fragment:fragment:1.3.2'
