--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,22 @@
 # org.gradle.parallel=true
 android.useAndroidX=true
 android.enableJetifier=true
+
+# Maven
+POM_NAME=FlowKit
+POM_ARTIFACT_ID=flow-kit
+POM_PACKAGING=aar
+VERSION_NAME=1.5.2
+GROUP=com.zeoflow
+POM_DESCRIPTION=An Android Library that comes with useful features and components
+POM_URL=https://github.com/zeoflow/flow-kit
+POM_SCM_URL=https://github.com/zeoflow/flow-kit
+POM_SCM_CONNECTION=scm:git@github.com:zeoflow/flow-kit.git
+POM_SCM_DEV_CONNECTION=scm:git@github.com:zeoflow/flow-kit.git
+POM_LICENCE_NAME=The Apache Software License, Version 2.0
+POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
+POM_LICENCE_DIST=repo
+POM_DEVELOPER_ID=zeoflow
+POM_DEVELOPER_NAME=ZeoFlow
+POM_DEVELOPER_EMAIL=open-source@zeoflow.com
+org.gradle.daemon=true
