--- a/flow-kit/build.gradle
+++ b/flow-kit/build.gradle
@@ -34,12 +34,14 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'com.zeoflow:zson:1.3.0'
-    implementation 'com.zeoflow:material-elements:2.4.5'
-    implementation 'com.zeoflow:stylar:1.1.0'
+    implementation 'com.zeoflow:material-elements:2.5.0'
+    implementation('com.zeoflow:stylar:1.1.0') {
+        exclude group: 'com.zeoflow', module: 'flow-kit'
+    }
 
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    implementation 'androidx.fragment:fragment:1.3.4'
+    implementation 'androidx.fragment:fragment:1.3.5'
 
     implementation("com.google.guava:guava:30.0-android")
     implementation("com.google.crypto.tink:tink-android:1.5.0")
