--- a/flow-kit/src/main/AndroidManifest.xml
+++ b/flow-kit/src/main/AndroidManifest.xml
@@ -3,14 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.zeoflow.flow.kit">
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        android:maxSdkVersion="28" />
-    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
-        tools:ignore="ScopedStorage" />
-
-    <application
-        android:requestLegacyExternalStorage="true">
+    <application>
 
         <provider
             android:name="com.zeoflow.initializer.ZeoFlowInitProvider"
